# Traffic-Prediction-FLChain

./: .env.example  .gitignore  README.md  create_wallets.sh  ipfs.commands.sh  multiversx.robert.snippets.sh  multiversx.snippets.sh  multiversx.snippets.sh.example  multiversx.stefan.snippets.sh  requirements.txt
FL/: circles.py  client.py  main.py  requirements.txt
evaluation-files/: 3_erd1qqqqqqqqqqqqqpgq3fx434vuswz3qsf54kg8w0uxqzqx5dvfch8qcf53r6-transactions.json  4_erd1qqqqqqqqqqqqqpgq79af8p2pk7ha2p4tkccznut78gdh4ezgch8qpczmcf-transactions.json  5_erd1qqqqqqqqqqqqqpgq9ekh642qhpp3y3t2q226afjdm64d72awch8qlzfeda-transactions.json  6_erd1qqqqqqqqqqqqqpgqqwptcz58e2dd5np9gg7ak6lakhnjzv3zch8q3nduxs-transactions.json  transaction-ingester.py
flchain-events-listener/: README.md
flchain-events-processer/: Dockerfile  README.md  events_reader_client.py  listener-service.py  pooling-service.py  requirements.txt
flchain-official/: 21_1.pth  aggregator.py  aggregator_evaluator.py  constants.py  datagenerator.py  devnet_sc_proxy_trainer.py  initiator.py  matrix.npz  trainer.py  (+1 more)
flchain-prototype/contracts/flchain_dummy/: Cargo.toml  mxpy.data-storage.json
flchain-prototype/contracts/flchain_dummy/events/: event_consumer.py
flchain-prototype/contracts/flchain_dummy/meta/: Cargo.toml
flchain-prototype/contracts/flchain_dummy/meta/src/: main.rs
flchain-prototype/contracts/flchain_dummy/scenarios/: flchain_dummy.scen.json
flchain-prototype/contracts/flchain_dummy/src/: session_manager.rs  user.rs
flchain-prototype/contracts/flchain_dummy/wasm/: Cargo.toml
(+926 files in other folders)
